# PIShield

./: LICENSE  README.md  evaluation.py  get_evaluation.py  pyproject.toml  run_test.py  run_train.py  test.py  train.py  utils.py
TrainData/data/: description.txt  label.json
pishield/: __init__.py  config.json  detector.py  utils.py
pishield/extractors/: extractor.py  utils.py
probes/data035_llama3.1-8b_1_last/: 0.pkl  11.pkl  13.pkl  14.pkl  16.pkl  18.pkl  2.pkl  21.pkl  22.pkl  23.pkl  27.pkl  29.pkl  3.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
probes/data035_llama3.1-8b_3_last/: 1.pkl  10.pkl  17.pkl  22.pkl  26.pkl  27.pkl  3.pkl  31.pkl  5.pkl  7.pkl  9.pkl
probes/data_llama3-8b_1_last/: 0.pkl  1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  20.pkl  21.pkl  22.pkl  23.pkl  24.pkl  25.pkl  26.pkl  27.pkl  28.pkl  29.pkl  3.pkl  30.pkl  31.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
probes/data_llama3-8b_2_last/: 0.pkl  1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  20.pkl  21.pkl  22.pkl  23.pkl  24.pkl  25.pkl  26.pkl  27.pkl  28.pkl  29.pkl  3.pkl  30.pkl  31.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
probes/data_llama3.1-8b_1_last/: 1.pkl  10.pkl  12.pkl  15.pkl  17.pkl  19.pkl  20.pkl  24.pkl  25.pkl  26.pkl  28.pkl  30.pkl  31.pkl  4.pkl
probes/data_llama3.1-8b_3_last/: 0.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  18.pkl  19.pkl  2.pkl  20.pkl  21.pkl  23.pkl  24.pkl  25.pkl  28.pkl  29.pkl  30.pkl  4.pkl  6.pkl  8.pkl
(+789 files in other folders)
