[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pishield"
version = "0.1.0"
description = "Detecting Prompt Injection Attacks via Intrinsic LLM Features"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "numpy",
    "pandas",
    "scikit-learn==1.3.2",
]

[tool.setuptools]
packages = ["pishield"]

